- Implementación de un icono para asignar como marcador. - Implementación de libreria para manerar las rutas sobre el mapa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <h1>{{ page.title }}</h1>
 
 <br>
-
+<!-- Buscador de puntos -->
 <div class="controls">
   <div class="input-group">
-    <input type="text" [(ngModel)]="ubication.inputCoordinate" (blur)="formatCoords()"
+    <input type="text" [(ngModel)]="ubication.inputCoordinate" (blur)="foundCoords()"
       [pattern]="ubication.regularExpresion" [placeholder]="page.placeHolderInputCoordinate" />
 
     <div *ngIf="page.alertError" class="error-text">
@@ -12,14 +12,18 @@
     </div>
   </div>
 
-  <button class="btn-icon" (click)="formatCoords()">🔎</button>
+  
+
+  <button class="btn-icon" (click)="foundCoords()">🔎</button>
   <button class="btn-text" (click)="clearLastMarkers()">Limpiar Mapa</button>
 </div>
 
 <br>
 
-<div class="controls">
-  <div id="map"></div>
+<!-- Mapa -->
+<div style="display: flex;">
+  <div class="controls contentMap">
+    <div id="map"></div>
+  </div>
 </div>
-
 <router-outlet />
